--- a/001.HTML/014.moksha/css/reset.css
+++ b/001.HTML/014.moksha/css/reset.css
@@ -27,3 +27,17 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
+    background: transparent;
+    border: 0;
+    font-size: 100%;
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+}
+
+#footer .footer-wrapper .left-box .bottom-wrapper1.en, #footer .footer-wrapper .left-box .bottom-wrapper1.bottom, #footer .footer-wrapper .left-box .bottom-wrapper2.en, #footer .footer-wrapper .left-box .bottom-wrapper2.bottom {
+    margin-bottom: 0;
+}
