--- a/001.HTML/014.moksha/css/common.css
+++ b/001.HTML/014.moksha/css/common.css
@@ -53,6 +53,7 @@
     font-size: 15px;
     font-weight: 400;
     transition: .4s;
+    z-index: 100;
 }
 
 #header .menu-box .counsel:hover {
@@ -81,7 +82,7 @@
     left: 0;
     top: 5px;
     width: 100%;
-    transition: opacity .4s;
+    transition: .4s;
 }
 
 #header .btn-menu::after {
@@ -93,8 +94,156 @@
     left: 0;
     bottom: 5px;
     width: 100%;
-    transition: opacity .4s;
+    transition: .4s;
 }
+
+#header .hidden-input {
+    display: none;
+}
+
+#header .hidden-input:checked ~ .btn-menu {
+    height: 20px;
+    z-index: 100;
+}
+
+#header .hidden-input:checked ~ .btn-menu::before {
+    top: 20%;
+    transform: rotate(10deg);
+    transform-origin: top left;
+}
+
+#header .hidden-input:checked ~ .btn-menu::after {
+    bottom: 20%;
+    transform: rotate(-10deg);
+    transform-origin: top left;
+}
+
+#header .hidden-input:checked ~ .global {
+    opacity: 1;
+    z-index: 98;
+    pointer-events: initial;
+}
+
+#header .global {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .4s;
+    opacity: 0;
+    z-index: -1;
+}
+
+#header .global .outer-wrapper {
+    width: 100%;
+    height: 100%;
+    max-width: 624px;
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
+#header .global .outer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#header .global .outer .inner {
+    width: 100%;
+    height: 495px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#header .global .outer .inner .menu-left {
+    height: 100%;
+}
+
+#header .global .outer .inner .menu {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#header .global .outer .inner .menu li {
+    letter-spacing: 1px;
+    line-height: 1.6;
+    margin-bottom: 36px;
+    transition: .4s;
+}
+
+#header .global .outer .inner .menu li .kr {
+    font-size: 17px;
+}
+
+#header .global .outer .inner .menu li .en {
+    font-size: 13px;
+}
+
+#header .global .outer .inner .menu li:last-child {
+    margin-bottom: 0;
+}
+
+#header .global .outer .inner .menu-right {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#header .global .outer .inner .sns {
+    font-size: 14px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-bottom: 0;
+}
+
+#header .global .outer .inner .sns li {
+    margin-bottom: 15px;
+    transition: .4s;
+}
+
+#header .global .outer .inner .sns li:last-child {
+    margin-bottom: 0;
+}
+
+#header .global .outer .inner .menu-lang {
+    margin-top: auto;
+}
+
+#header .nav-box .lang {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#header .global .outer .inner .menu-lang .lang > li > a {
+    font-size: 14px;
+}
+
+#header .global .outer .inner .menu-lang .lang > span {
+    font-size: 14px;
+}
+
+#header .nav-box .lang > li > a:last-child {
+    margin-left: 3px;
+}
+
+
 
 /* --------------------sec1-------------------- */
 .top-wrapper .top-layer-wrapper {
