--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -17,7 +17,7 @@
     max-width: 1300px;
 }
 
-.cont .down {
+.down {
     color: #1b3486;
     position: fixed;
     width: 40px;
@@ -30,15 +30,15 @@
     z-index: 99;
 }
 
-.cont .down:hover {
+.down:hover {
     animation: none;
 }
 
-.cont .down:hover img {
+.down:hover img {
     animation: rotate .8s ease-in-out forwards;
 }
 
-.cont .down img {
+.down img {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -47,16 +47,16 @@
     z-index: 10;
 }
 
-.cont .down .imgWrap {
+.down .imgWrap {
     width: 100%;
     position: absolute;
     height: 100%;
     z-index: 9999;
 }
 
-.cont .down .imgWrap::before {
+.down .imgWrap::before {
     position: absolute;
-    content: 'scroll';
+    content: '';
     animation: backC 2s linear infinite;
     width: 90%;
     height: 100%;
@@ -66,7 +66,7 @@
     border-radius: 3px;
 }
 
-.cont .down .imgWrap:hover::before {
+.down .imgWrap:hover::before {
     display: none;
 }
 
